--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@reduxjs/toolkit": "^2.5.1",
     "cra-template": "1.2.0",
