--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -7,6 +7,7 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@reduxjs/toolkit": "^2.5.1",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
