--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
+    "redux-actions": "^3.0.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
