--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -19,6 +19,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
