--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -9,13 +9,16 @@
     "@fullcalendar/react": "^6.1.15",
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@reduxjs/toolkit": "^2.6.0",
+    "@stomp/stompjs": "^7.0.0",
     "autotable": "^1.0.0",
+    "axios": "^1.8.1",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lottie-react": "^2.4.1",
+    "moment": "^2.30.1",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,6 +29,8 @@
     "react-scripts": "5.0.1",
     "redux-actions": "^3.0.3",
     "redux-thunk": "^3.1.0",
+    "sockjs-client": "^1.6.1",
+    "uuid": "^11.1.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
