--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -12,6 +12,7 @@
     "@stomp/stompjs": "^7.0.0",
     "autotable": "^1.0.0",
     "axios": "^1.8.1",
+    "chart.js": "^4.4.8",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
@@ -21,12 +22,14 @@
     "moment": "^2.30.1",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "redux-actions": "^3.0.3",
     "redux-thunk": "^3.1.0",
     "sockjs-client": "^1.6.1",
