--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -33,6 +33,7 @@
     "redux-actions": "^3.0.3",
     "redux-thunk": "^3.1.0",
     "sockjs-client": "^1.6.1",
+    "tippy.js": "^6.3.7",
     "uuid": "^11.1.0",
     "web-vitals": "^4.2.4"
   },
