--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "start": "NODE_OPTIONS='--max-old-space-size=4096' react-scripts start",
-    "build": "NODE_OPTIONS='--max-old-space-size=4096' react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
