--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -38,9 +38,9 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "NODE_OPTIONS='--max-old-space-size=4096' react-scripts start",
-    "build": "NODE_OPTIONS='--max-old-space-size=4096' CI=false react-scripts build",
-    "test": "react-scripts test",
+    "start": "NODE_OPTIONS='--max-old-space-size=6144' react-scripts start",
+    "build": "NODE_OPTIONS='--max-old-space-size=6144' CI=false react-scripts build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -60,5 +60,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@craco/craco": "^7.1.0"
   }
 }
