--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -38,8 +38,8 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "NODE_OPTIONS='--max-old-space-size=6144' react-scripts start",
-    "build": "NODE_OPTIONS='--max-old-space-size=6144' CI=false react-scripts build",
+    "start": "NODE_OPTIONS='--max-old-space-size=6144' FAST_REFRESH=false craco start",
+    "build": "NODE_OPTIONS='--max-old-space-size=6144' CI=false craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
