[25.03.13] 배포 테스트 13번째

--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -38,7 +38,7 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "serve -s build -l $PORT",
+    "start": "PORT=${PORT:-80} serve -s build -l $PORT",
     "build": "NODE_OPTIONS='--max-old-space-size=6144' CI=false craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
