--- a/cafe-sync/package.json
+++ b/cafe-sync/package.json
@@ -38,7 +38,7 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "PORT=${PORT:-80} serve -s build -l $PORT",
+    "start": "cross-env PORT=80 serve -s build -l 80",
     "build": "NODE_OPTIONS='--max-old-space-size=6144' CI=false craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
@@ -64,6 +64,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
+    "cross-env": "^7.0.3",
     "serve": "^14.2.4"
   }
 }
